bdr.BDR.scala.error
Compilation error:
BDR:2: error: unclosed character literal
var cell: Char = ''
                 ^BDR:2: error: illegal start of simple expression
var cell: Char = ''
                 ^